--- a/starter_code/public/stylesheets/styles.css
+++ b/starter_code/public/stylesheets/styles.css
@@ -6,3 +6,83 @@ grey: rgba(145, 145, 145, 0.481);
 font-family: Arial, Helvetica, sans-serif
 */
   
+/* ---- reset ---- */
+
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+
+/* ---- typography ---- */
+
+body {
+  color: #111;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 147%;
+}
+
+h1 {}
+
+h2 {}
+
+h3 {}
+
+p {
+  margin: 0;
+}
+
+
+
+/* ---- layout ---- */
+
+nav {
+  background-color: #2081C3;
+  font-size: 25px;
+  line-height: 1.6em;
+  padding: 20px;
+}
+
+nav a {
+  text-decoration: none;
+  color:white;
+  margin-left: 20px;
+}
+
+.index-container {
+  padding: 10%;
+  width: 40%;
+  margin: 0 auto;
+}
+
+.index-img {
+  width: 400px;
+}
+
+.beer-btn {
+  display: block;
+  margin: 15px auto;
+  background-color: #2081C3;
+  color:white;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background-color: #0A2C42;
+  color: white;
+  padding: 10px;
+  font-size: 20px;
+  line-height: 1.7em;
+}
