--- a/starter_code/views/index.hbs
+++ b/starter_code/views/index.hbs
@@ -1,3 +1,5 @@
 <div class="index-container">
-  
+  <img class="index-img" src="images/beer.png">
+  <button class="beer-btn">Check the beers!</button>
+  <button class="beer-btn">Check a random beer!</button>
 </div>
